Added new pages, art and transitions

--- a/nationPages/zloyvorPages/castPages/mnemos.html
+++ b/nationPages/zloyvorPages/castPages/mnemos.html
@@ -37,8 +37,19 @@
             
           <h2 class="secondTitle">Mnemos Fallax Craven</h2>
 
-          <p class="castText">Just a second place trans guy
-          </p>
+          <span class="creditList">
+
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 90%; margin: 0px auto;">
+
+            <p>Headshot by: WIP</p>
+            <p>Full body by: WIP</p>
+            <p>Reference sheet by: WIP</p>
+          
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 2rem auto;">
+
+          </span>
+
+          <p class="castText">Just a second place trans guy</p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
 
