--- a/nationPages/zloyvorPages/zloyvorMainpage.html
+++ b/nationPages/zloyvorPages/zloyvorMainpage.html
@@ -52,7 +52,7 @@
 
               <!-- Anastasia -->
               <a href="./castPages/anastasia.html" class="castCoverOne">
-                  <img src="zloyvorImg/placeholder.png" alt="anastasiaCover">
+                  <img src="zloyvorImg/anastasia.png" alt="anastasiaCover">
               </a>
 
               <a class="castTextOne" href="./castPages/anastasia.html">
