--- a/webpages/allCharacters.html
+++ b/webpages/allCharacters.html
@@ -131,6 +131,8 @@
 
             <div class="charGrid">
 
+              <!-- A -->
+
               <div class="character"
                 data-name="Alphonso Raffaelli"
                 data-nation="Altipiani"
@@ -220,6 +222,8 @@
                 Azathoth
               </div>
 
+              <!-- B -->
+
               <div class="character"
                 data-name="Bella Raffaelli"
                 data-nation="Altipiani"
@@ -227,6 +231,8 @@
                 data-book="main,silent">
                 Bella Raffaelli
               </div>
+
+              <!-- C -->
 
               <div class="character"
                 data-name="Camilla Accardi"
@@ -270,6 +276,8 @@
                 Cowboy
               </div>
 
+              <!-- D -->
+
               <div class="character" 
                 data-name="Daniel Zhdan"
                 data-nation="Zloyvor"
@@ -286,6 +294,8 @@
                 Didrik Gudmundsson
               </div>
 
+              <!-- E -->
+
               <div class="character"
                 data-name="Elixrún"
                 data-nation="Granskog"
@@ -301,6 +311,8 @@
                 data-book="silent">
                 Eliza Dahl
               </div>
+
+              <!-- F -->
 
               <div class="character"
                 data-name="Farida"
@@ -326,6 +338,8 @@
                 Fosco Demonte
               </div>
 
+              <!-- G -->
+
               <!-- Mystery -->
               <div class="character"
                 data-name="Gaute"
@@ -336,12 +350,22 @@
               </div>
 
               <div class="character"
+                data-name="Golewe"
+                data-nation="Chuma Baidisha"
+                data-role="unused"
+                data-book="none">
+                Golewe
+              </div>
+
+              <div class="character"
                 data-name="Gebhard"
                 data-nation="Leidrübreich"
                 data-role="unused"
                 data-book="none">
                 Gebhard
               </div>
+
+              <!-- H -->
 
               <!-- Mystery -->
               <div class="character"
@@ -351,6 +375,16 @@
                 data-book="none">
                 Henry
               </div>
+
+              <div class="character"
+                data-name="Herumesu"
+                data-nation="Shokuminchi Kokka"
+                data-role="side"
+                data-book="main">
+                Herumesu
+              </div>
+
+              <!-- I -->
 
               <div class="character"
                 data-name="Irina"
@@ -367,6 +401,8 @@
                 data-book="silent">
                 Isolde Demonte
               </div>
+
+              <!-- J -->
 
               <!-- Mystery -->
               <div class="character"
@@ -393,6 +429,8 @@
                 Julia van Versinge
               </div>
 
+              <!-- K -->
+
               <!-- Mystery -->
               <div class="character"
                 data-name="Kaito"
@@ -410,6 +448,10 @@
                 data-book="none">
                 Kevin
               </div>
+
+              <!-- L -->
+
+              <!-- M -->
 
               <div class="character"
                 data-name="Mirwa"
@@ -443,6 +485,8 @@
                 Mycroft Stemworth
               </div>
 
+              <!-- N -->
+
               <div class="character"
                 data-name="Nathan van Leeuwe"
                 data-nation="Altipiani"
@@ -475,6 +519,8 @@
                 Nyakhtohu
               </div>
 
+              <!-- O -->
+
               <div class="character"
                 data-name="Osvaldo Lucido"
                 data-nation="Nesgen"
@@ -482,6 +528,8 @@
                 data-book="silent">
                 Osvaldo Lucido
               </div>
+
+              <!-- P -->
 
               <div class="character"
                 data-name="Penelope Floros"
@@ -499,6 +547,9 @@
                 Philon Floros
               </div>
 
+              <!-- Q -->
+
+              <!-- R -->
 
               <!-- Mystery -->
               <div class="character"
@@ -525,6 +576,8 @@
                 Rocco Demonte
               </div>
 
+              <!-- S -->
+
               <div class="character"
                 data-name="Salvo Porfiotri"
                 data-nation="Altipiani"
@@ -550,6 +603,8 @@
                 Sophia Zanotti
               </div>
 
+              <!-- T -->
+
               <div class="character"
                 data-name="Thandiea"
                 data-nation="Chuma Baidisha"
@@ -557,6 +612,10 @@
                 data-book="silent">
                 Thandiea
               </div>
+
+              <!-- U -->
+
+              <!-- V -->
 
               <div class="character"
                 data-name="Valerio Demonte"
@@ -582,6 +641,14 @@
                 Viviana Querin
               </div>
 
+              <!-- W -->
+
+              <!-- X -->
+
+              <!-- Y -->
+
+              <!-- Z -->
+
               <div class="character"
                 data-name="Zharosol"
                 data-nation="Zloyvor"
@@ -590,6 +657,8 @@
                 Zharosol
               </div>
 
+              <!-- Á -->
+
               <div class="character"
                 data-name="Ásgeir"
                 data-nation="Jäädytetyt Riimut"
@@ -597,6 +666,8 @@
                 data-book="none">
                 Ásgeir
               </div>
+
+              <!-- Å -->
               
               <div class="character"
                 data-name="Åse"
