--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -37,6 +37,18 @@
             
           <h2 class="secondTitle">Reve Nox Craven</h2>
 
+          <span class="creditList">
+
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 90%; margin: 0px auto;">
+
+            <p>Headshot by: WIP</p>
+            <p>Full body by: WIP</p>
+            <p>Reference sheet by: WIP</p>
+          
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 2rem auto;">
+
+          </span>
+
           <p class="castText">Reve, also known as the second advisor to the Emperor and head of intelligence in the Edifice, 
             is a carefree and unbothered soul. He does what he's told, but never without a teasing comment or joke to piss people off. 
             Though he hardly ever takes things seriously, he knows when he should and will be there to assist right away. 
