--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -45,8 +45,7 @@
 
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
 
-                <p class="updateLog">Fixed the mobile version for the book page. Also added a new page where you can see all the characters we have so far!
-                   It can be found at the bottom of the nations page!</p>
+                <p class="updateLog">Made tiny adjustments to links and added the new amazing art by Tea4silver!</p>
 
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
                 
