Added more Altipianians and Nic pic

--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -48,13 +48,13 @@
 
             <div class="middleBlockLowerContent">
 
-              <!-- Reve -->
-              <a href="./castPages/reve.html" class="castCoverOne">
-                  <img src="altipianiImg/placeholder.png" alt="reveCover">
+              <!-- Camilla -->
+              <a href="./castPages/camilla.html" class="castCoverOne">
+                  <img src="altipianiImg/placeholder.png" alt="camillaCover">
               </a>
 
-              <a class="castTextOne" href="./castPages/reve.html">
-                  <p>Reve</p>
+              <a class="castTextOne" href="./castPages/camilla.html">
+                  <p>Camilla</p>
               </a>
 
               <!-- Cario -->
@@ -66,21 +66,93 @@
                   <p>Cario</p>
               </a>
 
-              <!-- Valerio -->
-              <a href="./castPages/valerio.html" class="castCoverThree">
-                  <img src="altipianiImg/placeholder.png" alt="valerioCover">
+              <!-- Cosmo -->
+              <a href="./castPages/cosmo.html" class="castCoverThree">
+                  <img src="altipianiImg/placeholder.png" alt="cosmoCover">
               </a>
 
-              <a class="castTextThree" href="./castPages/valerio.html">
-                  <p>Valerio</p>
+              <a class="castTextThree" href="./castPages/cosmo.html">
+                  <p>Cosmo</p>
               </a>
 
-              <!-- Viviana -->
-              <a href="./castPages/viviana.html" class="castCoverFour">
+              <!-- Nathan -->
+              <a href="./castPages/nathan.html" class="castCoverFour">
+                  <img src="altipianiImg/placeholder.png" alt="nathanCover">
+              </a>
+
+              <a class="castTextFour" href="./castPages/nathan.html">
+                  <p>Nathan</p>
+              </a>
+
+              <!-- Nicolas -->
+              <a href="./castPages/nicolas.html" class="castCoverFive">
+                  <img src="altipianiImg/nicolas.png" alt="nicolasCover">
+              </a>
+
+              <a class="castTextFive" href="./castPages/nicolas.html">
+                  <p>Nicolas</p>
+              </a>
+
+              <!-- Reve -->
+              <a href="./castPages/reve.html" class="castCoverSix">
                   <img src="altipianiImg/placeholder.png" alt="reveCover">
               </a>
 
-              <a class="castTextFour" href="./castPages/viviana.html">
+              <a class="castTextSix" href="./castPages/reve.html">
+                  <p>Reve</p>
+              </a>
+
+              <!-- Rocco -->
+              <a href="./castPages/rocco.html" class="castCoverSeven">
+                  <img src="altipianiImg/placeholder.png" alt="roccoCover">
+              </a>
+
+              <a class="castTextSeven" href="./castPages/rocco.html">
+                  <p>Rocco</p>
+              </a>
+
+              <!-- Salvo -->
+              <a href="./castPages/salvo.html" class="castCoverEight">
+                  <img src="altipianiImg/placeholder.png" alt="salvoCover">
+              </a>
+
+              <a class="castTextEight" href="./castPages/salvo.html">
+                  <p>Salvo</p>
+              </a>
+
+              <!-- Sophia -->
+              <a href="./castPages/sophia.html" class="castCoverNine">
+                  <img src="altipianiImg/placeholder.png" alt="sophiaCover">
+              </a>
+
+              <a class="castTextNine" href="./castPages/sophia.html">
+                  <p>Sophia</p>
+              </a>
+
+              <!-- Valerio -->
+              <a href="./castPages/valerio.html" class="castCoverTen">
+                  <img src="altipianiImg/placeholder.png" alt="valerioCover">
+              </a>
+
+              <a class="castTextTen" href="./castPages/valerio.html">
+                  <p>Valerio</p>
+              </a>
+
+              <!-- Vicenci -->
+              <a href="./castPages/vicenci.html" class="castCoverEleven">
+                  <img src="altipianiImg/placeholder.png" alt="vicenciCover">
+              </a>
+
+              <a class="castTextEleven" href="./castPages/vicenci.html">
+                  <p>Vicenci</p>
+              </a>
+
+              <!-- Viviana -->
+              <a href="./castPages/viviana.html" class="castCoverTwelve">
+                  <img src="altipianiImg/placeholder.png" alt="vivianaCover">
+              </a>
+
+              <a class="castTextTwelve" href="./castPages/viviana.html">
                   <p>Viviana</p>
               </a>
             </div>
