--- a/nationPages/altipianiPages/castPages/nicolas.html
+++ b/nationPages/altipianiPages/castPages/nicolas.html
@@ -33,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altipianiImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
+          <img src="../altipianiImg/bigNic.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Nicolas Raffaelli</h2>
 
