Added headshots to cast pages fixed mobile issue

--- a/nationPages/riimutPages/castPages/ase.html
+++ b/nationPages/riimutPages/castPages/ase.html
@@ -33,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../riimutImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
+          <img src="../riimutImg/bigAse.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Åse</h2>
 
