--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -33,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../zloyvorImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
+          <img src="../zloyvorImg/bigAna.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Anastasia</h2>
 
