Changed Nations page layout

--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -75,87 +75,86 @@
                   <p>Cosmo</p>
               </a>
 
-              <!-- Nathan -->
-              <a href="./castPages/nathan.html" class="castCoverFour">
-                  <img src="altipianiImg/placeholder.png" alt="nathanCover">
-              </a>
-
-              <a class="castTextFour" href="./castPages/nathan.html">
-                  <p>Nathan</p>
-              </a>
-
               <!-- Nicolas -->
-              <a href="./castPages/nicolas.html" class="castCoverFive">
+              <a href="./castPages/nicolas.html" class="castCoverFour">
                   <img src="altipianiImg/nicolas.png" alt="nicolasCover">
               </a>
 
-              <a class="castTextFive" href="./castPages/nicolas.html">
+              <a class="castTextFour" href="./castPages/nicolas.html">
                   <p>Nicolas</p>
               </a>
 
               <!-- Reve -->
-              <a href="./castPages/reve.html" class="castCoverSix">
+              <a href="./castPages/reve.html" class="castCoverFive">
                   <img src="altipianiImg/placeholder.png" alt="reveCover">
               </a>
 
-              <a class="castTextSix" href="./castPages/reve.html">
+              <a class="castTextFive" href="./castPages/reve.html">
                   <p>Reve</p>
               </a>
 
               <!-- Rocco -->
-              <a href="./castPages/rocco.html" class="castCoverSeven">
+              <a href="./castPages/rocco.html" class="castCoverSix">
                   <img src="altipianiImg/placeholder.png" alt="roccoCover">
               </a>
 
-              <a class="castTextSeven" href="./castPages/rocco.html">
+              <a class="castTextSix" href="./castPages/rocco.html">
                   <p>Rocco</p>
               </a>
 
               <!-- Salvo -->
-              <a href="./castPages/salvo.html" class="castCoverEight">
+              <a href="./castPages/salvo.html" class="castCoverSeven">
                   <img src="altipianiImg/placeholder.png" alt="salvoCover">
               </a>
 
-              <a class="castTextEight" href="./castPages/salvo.html">
+              <a class="castTextSeven" href="./castPages/salvo.html">
                   <p>Salvo</p>
               </a>
 
-              <!-- Sophia -->
-              <a href="./castPages/sophia.html" class="castCoverNine">
-                  <img src="altipianiImg/placeholder.png" alt="sophiaCover">
-              </a>
-
-              <a class="castTextNine" href="./castPages/sophia.html">
-                  <p>Sophia</p>
-              </a>
-
               <!-- Valerio -->
-              <a href="./castPages/valerio.html" class="castCoverTen">
+              <a href="./castPages/valerio.html" class="castCoverEight">
                   <img src="altipianiImg/placeholder.png" alt="valerioCover">
               </a>
 
-              <a class="castTextTen" href="./castPages/valerio.html">
+              <a class="castTextEight" href="./castPages/valerio.html">
                   <p>Valerio</p>
               </a>
 
-              <!-- Vicenci -->
-              <a href="./castPages/vicenci.html" class="castCoverEleven">
-                  <img src="altipianiImg/placeholder.png" alt="vicenciCover">
-              </a>
-
-              <a class="castTextEleven" href="./castPages/vicenci.html">
-                  <p>Vicenci</p>
-              </a>
-
               <!-- Viviana -->
-              <a href="./castPages/viviana.html" class="castCoverTwelve">
+              <a href="./castPages/viviana.html" class="castCoverNine">
                   <img src="altipianiImg/placeholder.png" alt="vivianaCover">
               </a>
 
-              <a class="castTextTwelve" href="./castPages/viviana.html">
+              <a class="castTextNine" href="./castPages/viviana.html">
                   <p>Viviana</p>
               </a>
             </div>
+
+            <h2 class="divinityTitle">Divinity</h2>
+
+            <div class="middleBlockOneDivinity">
+
+              <!-- Vicenci -->
+              <a href="./castPages/vicenci.html" class="divinityOneCover">
+                  <img src="altipianiImg/placeholder.png" alt="vicenciCover">
+              </a>
+
+              <a class="divinityOneText" href="./castPages/vicenci.html">
+                  <p>Vicenci</p>
+              </a>
+            </div>
+
+             <h2 class="mentionsTitle">Honorable Mentions</h2>
+
+             <div class="mentions">
+                <p class="mention">Alphonso</p> 
+                <p class="mention">Amo</p> 
+                <p class="mention">Bella</p> 
+                <p class="mention">Fosco</p>
+                <p class="mention">Isolde</p>  
+                <p class="mention">Nathan</p> 
+                <p class="mention">Sophia</p>
+             </div>
 
         </div>
 
