--- a/nationPages/riimutPages/riimutMainpage.html
+++ b/nationPages/riimutPages/riimutMainpage.html
@@ -81,6 +81,38 @@
               </a>
             </div>
 
+            <h2 class="divinityTitle">Divinity</h2>
+
+            <div class="middleBlockTwoDivinity">
+
+              <!-- God of snow -->
+              <a href="./castPages/snowGod.html" class="divinityOneCover">
+                  <img src="riimutImg/placeholder.png" alt="snowGodCover">
+              </a>
+
+              <a class="divinityOneText" href="./castPages/snowGod.html">
+                  <p>God of snow</p>
+              </a>
+
+              <!-- God of rune -->
+              <a href="./castPages/runeGod.html" class="divinityTwoCover">
+                  <img src="riimutImg/placeholder.png" alt="runeGodCover">
+              </a>
+
+              <a class="divinityTwoText" href="./castPages/runeGod.html">
+                  <p>God of runes</p>
+              </a>
+
+            </div>
+
+             <h2 class="mentionsTitle">Honorable Mentions</h2>
+
+             <div class="mentions">
+                <p class="mention">To</p>
+                <p class="mention">be</p>
+                <p class="mention">added</p>
+             </div>
+
         </div>
 
         <footer>
