--- a/nationPages/zloyvorPages/zloyvorMainpage.html
+++ b/nationPages/zloyvorPages/zloyvorMainpage.html
@@ -87,6 +87,38 @@
               </a>
           </div>
 
+          <h2 class="divinityTitle">Divinity</h2>
+
+            <div class="middleBlockTwoDivinity">
+
+              <!-- Nyakhtohu -->
+              <a href="./castPages/nyakhtohu.html" class="divinityOneCover">
+                  <img src="zloyvorImg/placeholder.png" alt="nyakhtohuCover">
+              </a>
+
+              <a class="divinityOneText" href="./castPages/nyakhtohu.html">
+                  <p>Nyakhtohu</p>
+              </a>
+
+              <!-- Zharosol -->
+              <a href="./castPages/zharosol.html" class="divinityTwoCover">
+                  <img src="zloyvorImg/placeholder.png" alt="zharosolCover">
+              </a>
+
+              <a class="divinityTwoText" href="./castPages/zharosol.html">
+                  <p>Zharosol</p>
+              </a>
+
+            </div>
+
+             <h2 class="mentionsTitle">Honorable Mentions</h2>
+
+             <div class="mentions">
+                <p class="mention">To</p>
+                <p class="mention">be</p>
+                <p class="mention">added</p>
+             </div>
+
         </div>
 
         <footer>
