--- a/webpages/aboutUs.html
+++ b/webpages/aboutUs.html
@@ -83,6 +83,10 @@
             <img class="gooberKai" src="../img/gooberKai.png" alt="KaiSprite">
             </a>
 
+            <a class="gooberKyara" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==">
+            <img class="gooberKyara" src="../img/gooberKyara.png" alt="KyaraSprite">
+            </a>
+
         </div>
 
         <footer>
