--- a/nationPages/altipianiPages/castPages/nicolas.html
+++ b/nationPages/altipianiPages/castPages/nicolas.html
@@ -49,7 +49,12 @@
 
           </span>
 
-          <p class="castText">Very cool mc
+          <p class="castText">
+            If you need a detective that might be willing to break a few rules and travel around all of Altipiani 
+            just to make sure your case won't end up as a cold one, Nicolas is your guy. He strives to resolve every single 
+            case he gets to work on and give the people involved the best results. Outside of work he mostly keeps to himself, 
+            you can often find him hanging out at his apartment and tinkering with his motorcycle or other tech he owns whenever 
+            he's not working on another case. Though, he enjoys going out to drink with his colleagues as well after a long shift.
           </p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
