--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -47,23 +47,23 @@
 
             <ul class="nationListLeft">
                 <li><a class="altipiani" href="./altipianiPages/altipianiMainpage.html">Altipiani</a></li>
-                <li><a class="altanawue" href="./altanawuePages/altanawueMainpage.html">'Ard Altanawue</a></li>
-                <li><a class="celerracion" href="./celerracionPages/celerracionMainpage.html">Celerración</a></li>
-                <li><a class="chuma" href="./chumaPages/chumaMainpage.html">Chuma Baidisha</a></li>
-                <li><a class="farostia" href="./farostiaPages/farostiaMainpage.html">Farostia</a></li>
-                <li><a class="granskog" href="./granskogPages/granskogMainpage.html">Granskog</a></li>
+                <li><a class="altanawue" href="./altanawuePages/altanawueMainpage.html">'Ard Altanawue(WIP)</a></li>
+                <li><a class="celerracion" href="./celerracionPages/celerracionMainpage.html">Celerración(WIP)</a></li>
+                <li><a class="chuma" href="./chumaPages/chumaMainpage.html">Chuma Baidisha(WIP)</a></li>
+                <li><a class="farostia" href="./farostiaPages/farostiaMainpage.html">Farostia(WIP)</a></li>
+                <li><a class="granskog" href="./granskogPages/granskogMainpage.html">Granskog(WIP)</a></li>
                 <li><a class="riimut" href="./riimutPages/riimutMainpage.html">Jäädytetyt Riimut</a></li>
-                <li><a class="leidrubreich" href="./leidrubreichPages/leidrubreichMainpage.html">Leidrübreich</a></li>
+                <li><a class="leidrubreich" href="./leidrubreichPages/leidrubreichMainpage.html">Leidrübreich(WIP)</a></li>
             </ul>
 
             <ul class="nationListRight">
-                <li><a class="midprot" href="./midprotPages/midprotMainpage.html">Midprot</a></li>
-                <li><a class="nesgen" href="./nesgenPages/nesgenMainpage.html">Nesgen</a></li>
-                <li><a class="kokka" href="./kokkaPages/kokkaMainpage.html">Shokuminchi Kokka</a></li>
-                <li><a class="sothleigh" href="./sothleighPages/sothleighMainpage.html">Sothleigh</a></li>
-                <li><a class="terpayatre" href="./terpayatrePages/terpayatreMainpage.html">Terpayâtre</a></li>
-                <li><a class="wasteland" href="./wastelandPages/wastelandMainpage.html">The Wasteland</a></li>
-                <li><a class="vriesland" href="./vrieslandPages/vrieslandMainpage.html">Vriesland</a></li>
+                <li><a class="midprot" href="./midprotPages/midprotMainpage.html">Midprot(WIP)</a></li>
+                <li><a class="nesgen" href="./nesgenPages/nesgenMainpage.html">Nesgen(WIP)</a></li>
+                <li><a class="kokka" href="./kokkaPages/kokkaMainpage.html">Shokuminchi Kokka(WIP)</a></li>
+                <li><a class="sothleigh" href="./sothleighPages/sothleighMainpage.html">Sothleigh(WIP)</a></li>
+                <li><a class="terpayatre" href="./terpayatrePages/terpayatreMainpage.html">Terpayâtre(WIP)</a></li>
+                <li><a class="wasteland" href="./wastelandPages/wastelandMainpage.html">The Wasteland(WIP)</a></li>
+                <li><a class="vriesland" href="./vrieslandPages/vrieslandMainpage.html">Vriesland(WIP)</a></li>
                 <li><a class="zloyvor" href="./zloyvorPages/zloyvorMainpage.html">Zloyvor</a></li>
             </ul>
             <a class="allCharLink" href="../webpages/allCharacters.html">
