--- a/nationPages/riimutPages/castPages/ase.html
+++ b/nationPages/riimutPages/castPages/ase.html
@@ -49,7 +49,7 @@
 
           </span>
 
-          <p class="castText">Freakmaster.
+          <p class="castText">(WIP)
           </p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
