--- a/nationPages/riimutPages/riimutMainpage.html
+++ b/nationPages/riimutPages/riimutMainpage.html
@@ -91,7 +91,7 @@
               </a>
 
               <a class="divinityOneText" href="./castPages/snowGod.html">
-                  <p>God of snow</p>
+                  <p>God of snow(WIP)</p>
               </a>
 
               <!-- God of rune -->
@@ -100,7 +100,7 @@
               </a>
 
               <a class="divinityTwoText" href="./castPages/runeGod.html">
-                  <p>God of runes</p>
+                  <p>God of runes(WIP)</p>
               </a>
 
             </div>
