--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -49,7 +49,7 @@
 
           </span>
 
-          <p class="castText">A fierce huntress
+          <p class="castText">(WIP)
           </p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
