--- a/nationPages/zloyvorPages/zloyvorMainpage.html
+++ b/nationPages/zloyvorPages/zloyvorMainpage.html
@@ -65,7 +65,7 @@
               </a>
 
               <a class="castTextTwo" href="./castPages/irina.html">
-                  <p>Irina</p>
+                  <p>Irina(WIP)</p>
               </a>
 
               <!-- Mnemos -->
@@ -83,7 +83,7 @@
               </a>
 
               <a class="castTextFour" href="./castPages/ruka.html">
-                  <p>Ruka</p>
+                  <p>Ruka(WIP)</p>
               </a>
           </div>
 
@@ -97,7 +97,7 @@
               </a>
 
               <a class="divinityOneText" href="./castPages/nyakhtohu.html">
-                  <p>Nyakhtohu</p>
+                  <p>Nyakhtohu(WIP)</p>
               </a>
 
               <!-- Zharosol -->
@@ -106,7 +106,7 @@
               </a>
 
               <a class="divinityTwoText" href="./castPages/zharosol.html">
-                  <p>Zharosol</p>
+                  <p>Zharosol(WIP)</p>
               </a>
 
             </div>
