--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -95,7 +95,7 @@
 
               <div class="projectsTextOne">
                 <!-- <a href="projects/websiteProject.html">Website</a> -->
-                <a href="https://domennotorre.github.io/index.html">Website</a>
+                <a href="https://domennotorre.github.io/index.html">Website(WIP)</a>
               </div>
 
               <!-- Story -->
@@ -108,7 +108,7 @@
 
               <div class="projectsTextTwo">
                 <!-- <a href="projects/storyProject.html">Story</a> -->
-                <a href="https://www.wattpad.com/user/Domen-No-Torre">Story</a>
+                <a href="https://www.wattpad.com/user/Domen-No-Torre">Story(WIP)</a>
               </div>
 
               <!-- Skins -->
