--- a/nationPages/zloyvorPages/castPages/mnemos.html
+++ b/nationPages/zloyvorPages/castPages/mnemos.html
@@ -49,7 +49,7 @@
 
           </span>
 
-          <p class="castText">Just a second place trans guy</p>
+          <p class="castText">(WIP)</p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
 
