--- a/nationPages/altipianiPages/castPages/cosmo.html
+++ b/nationPages/altipianiPages/castPages/cosmo.html
@@ -45,7 +45,7 @@
             <p>Full body by: WIP</p>
             <p>Reference sheet by: WIP</p>
           
-            <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 2rem auto;">
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0px auto;">
 
           </span>
 
