Added lore for Valerio

--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -117,7 +117,7 @@
               </a>
 
               <a class="castTextEight" href="./castPages/valerio.html">
-                  <p>Valerio(WIP)</p>
+                  <p>Valerio</p>
               </a>
 
               <!-- Viviana -->
