--- a/nationPages/altipianiPages/castPages/cosmo.html
+++ b/nationPages/altipianiPages/castPages/cosmo.html
@@ -50,7 +50,7 @@
           </span>
 
           <p class="castText">The Cybernetic Support Mechanism, or more commonly referred to as Cosmo, is an Ai built by 
-            none other than the Emperor himself. He was designed to assist people with mundane tasks like finding information, 
+            none other than<a class="referLink" href="valerio.html">the Emperor</a> himself. He was designed to assist people with mundane tasks like finding information, 
             ordering food or giving reminders for things, but to some people, he's become a friend, a buddy that's always there 
             when you need them. Thanks to his ability to read and copy emotions it's almost like he's a real  human as well, which 
             makes it easier for some to communicate with him. Cosmo has been integrated into almost every single Altipianian tech, 
