--- a/nationPages/altipianiPages/castPages/valerio.html
+++ b/nationPages/altipianiPages/castPages/valerio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cario - Mindbound</title>
+    <title>Valerio - Mindbound</title>
     <link rel="stylesheet" href="../../cast.css" type="text/css">
      <link rel="icon" type="image/x-icon" href="../../../img/favi.png">
 </head>
@@ -35,7 +35,7 @@
 
           <img src="../altipianiImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
             
-          <h2 class="secondTitle">Cario Vesco</h2>
+          <h2 class="secondTitle">Valerio Consoli Demonte</h2>
 
           <span class="creditList">
 
@@ -50,11 +50,13 @@
           </span>
 
           <p class="castText">
-            The Emperor's right hand and trusted first advisor, Cario Vesco. <a class="referLink" href="valerio.html">Valerio</a> isn't the first Emperor he's served under,
-             also having served Valerio's father and some claim even his grandfather. He takes his job as advisor very seriously,
-              always making sure everything is going smoothly and assisting the Emperor wherever he can. Other than that,
-               he happens to be his colleague <a class="referLink" href="reve.html">Reve</a>'s favorite person to annoy after meetings, but also one of the few people
-                that manages to get him to shut him up.
+            Altipiani's very own Emperor, Valerio Demonte. After his victories in both rune wars, 
+            his people only looked up to him more, some even worshipping him as if he were a god. He doesn't 
+            mind the praise, the only thing that matters in his eyes is to keep his people safe and will go 
+            through great lengths to do so. Due to the scarce number of Altipianians with magical abilities, 
+            he wanted to make sure those without it would be able to protect themselves as well in case of an 
+            emergency. So after acquiring the runes he wasted no time producing weapons, armor and other 
+            utilities infused with this foreign magic.
           </p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
